--- a/anan0gueira-Git/ProjetoFim.ipynb
+++ b/anan0gueira-Git/ProjetoFim.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ananogueira/.local/lib/python3.8/site-packages/nilearn/datasets/__init__.py:87: FutureWarning: Fetchers from the nilearn.datasets module will be updated in version 0.9 to return python strings instead of bytes and Pandas dataframes instead of Numpy arrays.\n",
-      "  warn(\"Fetchers from the nilearn.datasets module will be \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nilearn\n",
     "from nilearn import plotting\n",
@@ -50,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<nilearn.plotting.displays.OrthoSlicer at 0x10b0a95e0>"
+       "<nilearn.plotting.displays.OrthoSlicer at 0x12226d940>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -90,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -103,10 +94,10 @@
     {
      "data": {
       "text/plain": [
-       "<nilearn.plotting.displays.OrthoSlicer at 0x1228878e0>"
+       "<nilearn.plotting.displays.OrthoSlicer at 0x122adbdf0>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -151,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +225,7 @@
        "<AxesSubplot:label='conditions', ylabel='scan number'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -256,7 +247,6 @@
     "design_matrix = make_first_level_design_matrix(frame_times, events_df,\n",
     "                                    drift_model='polynomial', drift_order=3,\n",
     "                                    hrf_model=hrf_model)\n",
-    "\n",
     "plot_design_matrix(design_matrix)"
    ]
   },
@@ -279,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +297,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-29-73661a8aadc3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Fitting a GLM'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mfmri_glm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFirstLevelModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mfmri_glm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc_data_preproc2standard\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdesign_matrices\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdesign_matrix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-52-73661a8aadc3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Fitting a GLM'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mfmri_glm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFirstLevelModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mfmri_glm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc_data_preproc2standard\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdesign_matrices\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdesign_matrix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/.local/lib/python3.8/site-packages/nilearn/glm/first_level/first_level.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, run_imgs, events, confounds, design_matrices)\u001b[0m\n\u001b[1;32m    504\u001b[0m                 \u001b[0mt_glm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    505\u001b[0m                 \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstderr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Performing GLM computation\\r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 506\u001b[0;31m             labels, results = mem_glm(Y, design.values,\n\u001b[0m\u001b[1;32m    507\u001b[0m                                       \u001b[0mnoise_model\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnoise_model\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    508\u001b[0m                                       bins=100, n_jobs=self.n_jobs)\n",
       "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/joblib/memory.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    350\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    351\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 352\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    353\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    354\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mcall_and_shelve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/.local/lib/python3.8/site-packages/nilearn/glm/first_level/first_level.py\u001b[0m in \u001b[0;36mrun_glm\u001b[0;34m(Y, X, noise_model, bins, n_jobs, verbose)\u001b[0m\n\u001b[1;32m    116\u001b[0m         )\n\u001b[1;32m    117\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 118\u001b[0;31m         raise ValueError('The number of rows of Y '\n\u001b[0m\u001b[1;32m    119\u001b[0m                          \u001b[0;34m'should match the number of rows of X.'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    120\u001b[0m                          \u001b[0;34m' You provided X with shape {0} '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -325,22 +315,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "unsupported format character 'n' (0x6e) at index 1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-31-3349a0dab2d7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mz_maps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcontrast\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbasic_contrasts\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mz_maps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfmri_glm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_contrast\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbasic_contrasts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcontrast\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_type\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'z_score'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/.local/lib/python3.8/site-packages/nilearn/glm/first_level/first_level.py\u001b[0m in \u001b[0;36mcompute_contrast\u001b[0;34m(self, contrast_def, stat_type, output_type)\u001b[0m\n\u001b[1;32m    577\u001b[0m             \u001b[0mcon_vals\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcon_vals\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mn_runs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    578\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mn_contrasts\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mn_runs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 579\u001b[0;31m             raise ValueError('%n contrasts given, while there are %n runs' %\n\u001b[0m\u001b[1;32m    580\u001b[0m                              (n_contrasts, n_runs))\n\u001b[1;32m    581\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: unsupported format character 'n' (0x6e) at index 1"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "z_maps=[]\n",
     "for contrast in basic_contrasts:\n",
@@ -356,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -404,10 +381,10 @@
        "\" width=\"600\" height=\"270.0\" frameBorder=\"0\"></iframe>"
       ],
       "text/plain": [
-       "<nilearn.plotting.html_stat_map.StatMapView at 0x1218c7370>"
+       "<nilearn.plotting.html_stat_map.StatMapView at 0x122287280>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -453,10 +430,10 @@
     {
      "data": {
       "text/plain": [
-       "<nilearn.plotting.displays.OrthoSlicer at 0x122a5de20>"
+       "<nilearn.plotting.displays.OrthoSlicer at 0x122da5e20>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -479,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +526,7 @@
        "(91, 109, 91, 125)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
