--- a/anan0gueira-Git/scratch.ipynb
+++ b/anan0gueira-Git/scratch.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "# Set variables\n",
     "#ROOT_DATA='/Users/home/Documents/BIDS/'\n",
-    "ROOT_DATA=r\"C:\\Users\\bdireito\\Desktop\\Data\\DATA_ananogueira\\func\"\n",
+    "ROOT_DATA=\"C:\\Users\\bdireito\\Desktop\\Data\\DATA_ananogueira\\func\"\n",
     "\n",
     "SUB=['sub-0001']\n",
     "\n",
@@ -41,7 +41,7 @@
     "RUN='run-01'\n",
     "\n",
     "# project folder\n",
-    "ROOT_PROJECT=r'C:\\Users\\bdireito\\Documents\\GitHub\\MVPA-speech_project\\anan0gueira-Git'\n"
+    "ROOT_PROJECT='C:\\Users\\bdireito\\Documents\\GitHub\\MVPA-speech_project\\anan0gueira-Git'\n"
    ]
   },
   {
@@ -729,7 +729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
